Make visibility of legends configurable. Also fix bottom history css

--- a/src/mist/io/static/css/graph_list.css
+++ b/src/mist/io/static/css/graph_list.css
@@ -126,5 +126,6 @@
 }
 
 #bottom-history {
-    margin-top: -20px;
+    position: relative;
+    bottom: 20px;
 }
